Fixed issue 175, sub-tabs are displayed on two lines when the project title is too long.

--- a/www/media/idf/css/style.css
+++ b/www/media/idf/css/style.css
@@ -302,6 +302,7 @@ h1.project-title {
   z-index: 100;
   text-align: right;
   padding-right: 5px;
+  margin-bottom: 0;
 }
 
 .note { 
